--- a/propose-day/index.html
+++ b/propose-day/index.html
@@ -21,7 +21,7 @@
     <style>
         html,
         body {
-            background-color: #ffb7c5 !important;
+            background-color: #000000 !important;
             /* Match overlay color - !important to override external CSS */
         }
 
