--- a/rose-day/index.html
+++ b/rose-day/index.html
@@ -76,11 +76,19 @@
     </div>
 
     <!-- Celebration Popup -->
-    <div id="celebration-popup" class="popup-overlay hidden">
-        <div class="popup-content">
-            <h2>Happy Rose Day!</h2>
-            <p>My love grows for you every day!</p>
-            <a href="../index.html" class="pulse-btn">Go to Calendar</a>
+    <div id="celebration-popup" class="popup-overlay">
+        <div class="popup-container">
+            <div class="popup-left">
+                <h1 class="popup-title">Happy Rose Day!</h1>
+                <p class="popup-message">
+                    My love grows for you every day! Like a rose, you make my life beautiful.
+                </p>
+                <button id="calendar-btn" class="calendar-button" onclick="window.location.href='../index.html'">Go to
+                    Calendar</button>
+            </div>
+            <div class="popup-right">
+                <img src="../assets/images/character/arn_happy.png" alt="Character" class="popup-character">
+            </div>
         </div>
     </div>
 
