--- a/valentines-day/index.html
+++ b/valentines-day/index.html
@@ -118,6 +118,11 @@
 
     <!-- Final Outro Screen -->
     <div id="outro-screen" class="hidden">
+        <!-- New Video Added -->
+        <video id="final-video" class="outro-video-element" loop muted playsinline>
+            <source src="assets/vdo.mp4" type="video/mp4">
+        </video>
+
         <h1 class="outro-text">Thank you for being a part of my life ❤️</h1>
         <button class="btn outro-btn" onclick="goBack()">Go to Calendar</button>
     </div>
