--- a/hug-day/index.html
+++ b/hug-day/index.html
@@ -65,8 +65,7 @@
             <div class="popup-left">
                 <h1 class="popup-title">Happy Hug Day!</h1>
                 <p class="popup-message">
-                    A hug depends on who is giving it, and well... I'm sending you the biggest, warmest one! You create
-                    a Safe Space for me
+                    A hug from you feels less like a moment and more like a peaceful place to rest my heart.
                 </p>
                 <button id="calendar-btn" class="calendar-button">Go to Calendar</button>
             </div>
