--- a/propose-day/index.html
+++ b/propose-day/index.html
@@ -49,6 +49,25 @@
     </div>
 
     <div class="container" id="propose-container">
+        <!-- Asset: static.gif (TV Static) -->
+        <img src="assets/static.gif" id="static-asset" alt="TV Static" class="game-asset">
+
+        <!-- Signal Bar for TV Hit Mini-game -->
+        <div id="signal-bar-container">
+            <div id="signal-bar-label">Signal Bar</div>
+            <div id="signal-bar">
+                <div id="signal-bar-fill"></div>
+            </div>
+        </div>
+
+        <!-- Guide Character (Hidden by default) -->
+        <div id="minigame-guide" class="character-guide hidden">
+            <img src="../assets/images/character/arn_point.png" alt="Guide Character" class="character-img">
+        </div>
+
+        <!-- Text Bubble (Hidden by default) -->
+        <img src="assets/text_bubble.png" id="text-bubble" class="hidden" alt="Text Bubble">
+
         <!-- Asset: b.png (Background) -->
         <img src="assets/b.png" id="background-asset" alt="Room Background" class="game-asset">
         <!-- Asset: text.png (Text Overlay) -->
@@ -58,6 +77,9 @@
             class="game-asset">
         <!-- Asset: room.png (Room Overlay) -->
         <img src="assets/room.png" id="room-asset" alt="Pink Room" class="game-asset">
+
+        <!-- Asset: remote.png (Remote Control) -->
+        <img src="assets/remote.png" id="remote-control" alt="Remote Control" class="game-asset">
 
         <!-- Asset: yes_btn.png (Yes Button) -->
         <img src="assets/yes_btn.png" id="yes-btn" alt="Yes Button" class="game-asset interactive-btn">
