--- a/chocolate-day/index.html
+++ b/chocolate-day/index.html
@@ -76,7 +76,16 @@
 
     <!-- Attempt Counter -->
     <div id="attemptCounter" class="attempt-counter">
-        Attempts: <span id="attemptText">1/3</span>
+        Attempts: <span id="attemptText">1/5</span>
+    </div>
+
+    <!-- Chocolate Collection Box -->
+    <div class="collection-box">
+        <div class="collection-slot" id="slot-1"></div>
+        <div class="collection-slot" id="slot-2"></div>
+        <div class="collection-slot" id="slot-3"></div>
+        <div class="collection-slot" id="slot-4"></div>
+        <div class="collection-slot" id="slot-5"></div>
     </div>
 
     <!-- Prize Popup Modal -->
@@ -90,6 +99,12 @@
             <p id="attemptsLeft" class="attempts-left">Attempts Left: 2</p>
             <button id="actionBtn" class="action-btn">Go Again</button>
         </div>
+    </div>
+
+    <!-- Guide Character (Bottom Left) -->
+    <div class="guide-container">
+        <img src="../assets/images/character/arn_point.png" alt="Guide Character" class="guide-character">
+        <img src="assets/text_bubble.png" alt="Bubble" class="guide-bubble">
     </div>
 
     <!-- Final Summary Screen -->
@@ -111,6 +126,12 @@
             </div>
             <button id="calendarBtn" class="calendar-btn">Go to Calendar</button>
         </div>
+    </div>
+
+    <!-- Font Preloader (Hidden) -->
+    <div
+        style="font-family: 'Emilys Candy', cursive; opacity: 0; pointer-events: none; position: absolute; z-index: -999;">
+        Preload Font
     </div>
 
     <!-- Scripts -->
