--- a/teddy-day/index.html
+++ b/teddy-day/index.html
@@ -50,7 +50,9 @@
             <div id="conveyor-belt"></div>
 
             <!-- Layer 3: Game Elements -->
-            <div id="teddy" class="running"></div>
+            <div id="teddy" class="running">
+                <div class="teddy-sprite"></div>
+            </div>
 
             <!-- Level 4: Foreground Overlay -->
             <div id="foreground"></div>
